fixed spacing in mobile version of homepahge

--- a/YStemAndChess/src/app/pages/home/home.component.scss
+++ b/YStemAndChess/src/app/pages/home/home.component.scss
@@ -527,7 +527,7 @@ body {
     
         #become-a-mentor-img img {
             margin-top:3%;
-            margin-left:28%;
+            margin-left:18.5%;
         }
     
         #become-a-mentor-header1 {
